--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+ height: 12000px;
 }
 .Name-color{
     color: #FD6E0A;
@@ -50,8 +51,10 @@ nav h1{
     justify-content: space-between;
     background-image: url("developer.png"), url(header_bg.png); 
     background-repeat: no-repeat;
-    background-position: left top, right bottom;
+    background-size: 80px, auto;
+    background-position: left, right bottom;
     background-color: #FFF8F3;
+    box-shadow: inset;
 }
 .container{
     border: 1px solid;
@@ -73,6 +76,8 @@ body{
     margin: 250px;
     text-align: center;
     align-items: center;
+    border: 2px solid black;
+    padding: 30px 90px 30px 90px;
 }
 .topic, .description{
     text-align: center;
